--- a/.github/workflows/ansiblelint.yml
+++ b/.github/workflows/ansiblelint.yml
@@ -9,7 +9,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7]
+        python-version: [2.7, 3.7]
+        ansible-version: [2.7.13, 2.8.4]
 
     steps:
     - uses: actions/checkout@v1
@@ -17,10 +18,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install Ansible ${{ matrix.ansible-version }}
       run: |
         python -m pip install --upgrade pip
-        pip install ansible ansible-lint
+        pip install ansible-lint ansible==${{ matrix.ansible-version }}
     - name: Lint playbook
       run: |
         ansible-playbook site.yml --syntax-check
