--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -7,3 +7,8 @@
   user:
     name: koh
     shell: /usr/local/bin/zsh
+
+- name: set completion for ccat
+  get_url:
+    url: https://raw.githubusercontent.com/jingweno/ccat/master/completion/zsh/_ccat
+    dest: /usr/local/share/zsh/site-functions/_ccat
