--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: set zsh as login shell
   user:
-    name: koh
+    name: "{{ lookup('env', 'USER') }}"
     shell: /usr/local/bin/zsh
 
 - name: set completion for ccat
