--- a/.github/workflows/ansiblelint.yml
+++ b/.github/workflows/ansiblelint.yml
@@ -26,3 +26,6 @@ jobs:
       run: |
         ansible-playbook site.yml --syntax-check
         ansible-lint site.yml
+    - name: Run playbook
+      run: |
+        ansible-playbook site.yml
