--- a/.github/workflows/ansibletest.yml
+++ b/.github/workflows/ansibletest.yml
@@ -1,4 +1,4 @@
-name: Ansible lint
+name: Ansible test
 
 on: [push]
 
@@ -26,3 +26,6 @@ jobs:
       run: |
         ansible-playbook site.yml --syntax-check
         ansible-lint site.yml
+    - name: run playbook
+      run: |
+        ansible-playbook site.yml
