--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -8,6 +8,7 @@
   user:
     name: "{{ lookup('env', 'USER') }}"
     shell: /usr/local/bin/zsh
+  become: True
 
 - name: set completion for ccat
   get_url:
