--- a/roles/zsh-docker/tasks/main.yml
+++ b/roles/zsh-docker/tasks/main.yml
@@ -1,3 +1,12 @@
+- name: test
+  shell: "ls -l {{ item }}"
+  with_items:
+    - /Applications/
+    - /Applications/Docker.app/
+    - /Applications/Docker.app/Contents/
+    - /Applications/Docker.app/Contents/Resources/
+    - /Applications/Docker.app/Contents/Resources/etc/
+
 - name: enable zsh completion for docker
   file:
     src: "/Applications/Docker.app/Contents/Resources/etc/{{ item }}.zsh-completion"
