--- a/roles/zsh-docker/tasks/main.yml
+++ b/roles/zsh-docker/tasks/main.yml
@@ -6,6 +6,7 @@
     - /Applications/Docker.app/Contents/
     - /Applications/Docker.app/Contents/Resources/
     - /Applications/Docker.app/Contents/Resources/etc/
+  changed_when: False
 
 - name: enable zsh completion for docker
   file:
