--- a/roles/brew/tasks/main.yml
+++ b/roles/brew/tasks/main.yml
@@ -1,20 +1,20 @@
-- name: Homebrew tap
-  homebrew_tap:
-    name: "{{ item }}"
-    state: present
-  with_items: "{{ brew_taps }}"
-
-- name: Update Homebrew
-  homebrew:
-    update_homebrew: True
-
-- name: Install Homebrew Cask Packages
-  homebrew_cask:
-    name: "{{ item }}"
-    state: present
-    install_options: "appdir=/Applications"
-    accept_external_apps: True
-  with_items: "{{ brew_cask_apps }}"
+#- name: Homebrew tap
+#  homebrew_tap:
+#    name: "{{ item }}"
+#    state: present
+#  with_items: "{{ brew_taps }}"
+#
+#- name: Update Homebrew
+#  homebrew:
+#    update_homebrew: True
+#
+#- name: Install Homebrew Cask Packages
+#  homebrew_cask:
+#    name: "{{ item }}"
+#    state: present
+#    install_options: "appdir=/Applications"
+#    accept_external_apps: True
+#  with_items: "{{ brew_cask_apps }}"
 
 - name: Install Homebrew Packages
   homebrew:
