--- a/roles/code/tasks/main.yml
+++ b/roles/code/tasks/main.yml
@@ -17,6 +17,10 @@
     - ~/Library/ApplicationSupport/
     - ~/Library/ApplicationSupport/Code/
     - ~/Library/ApplicationSupport/Code/User/
+    - ~/Library/Application\ Support/Code/User/
+    - ~/Library/Application\ Support/Code/
+    - ~/Library/Application\ Support/
+    - ~/Library/Application\ Support/Code/User/
   changed_when: False
 
 - name: set key mapping
