--- a/roles/brew/tasks/main.yml
+++ b/roles/brew/tasks/main.yml
@@ -16,7 +16,7 @@
     accept_external_apps: True
   with_items: "{{ brew_cask_apps }}"
 
-#- name: Install Homebrew Packages
-#  homebrew:
-#    name: "{{ brew_packages }}"
-#    state: present
+- name: Install Homebrew Packages
+  homebrew:
+    name: "{{ brew_packages }}"
+    state: present
