--- a/.github/workflows/ansibletest.yml
+++ b/.github/workflows/ansibletest.yml
@@ -29,3 +29,7 @@ jobs:
     - name: run playbook
       run: |
         ansible-playbook site.yml
+    - name: run tests
+      run: |
+        pycodestyle -v roles
+        py.test -v roles 
