--- a/.github/workflows/ansibletest.yml
+++ b/.github/workflows/ansibletest.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Ansible ${{ matrix.ansible-version }}
       run: |
         python -m pip install --upgrade pip
-        pip install testinfra ansible-lint ansible==${{ matrix.ansible-version }}
+        pip install pycodestyle testinfra ansible-lint ansible==${{ matrix.ansible-version }}
     - name: Lint playbook
       run: |
         ansible-playbook site.yml --syntax-check
