--- a/roles/brew/vars/main.yml
+++ b/roles/brew/vars/main.yml
@@ -15,9 +15,7 @@ brew_cask_apps:
   - google-chrome
   - hammerspoon
   - macdown
-  - spectacle
-  - vagrant
-#  - virtualbox
+  - rectangle
   - visual-studio-code
   - showyedge
   - docker
@@ -26,34 +24,17 @@ brew_cask_apps:
 brew_packages:
   - cert
   - git
-  - glib
   - go
   - grep
-  - httpie
   - jq
-  - nkf
-  - oniguruma
-  - openssl
-  - peco
   - pwgen
-  - ruby
   - source-highlight
   - telnet
-  - terraform
   - tig
-  - tmux
-  - tmux-xpanes
   - tree
   - wget
   - zsh
   - zsh-completions
-  - yamllint
   - lazydocker
-  - docui
-  - shellcheck
   - htop
-  - ccat
-  - ffmpeg
-  - hugo
-  - git-secrets
   - nodenv
