--- a/roles/code/tasks/main.yml
+++ b/roles/code/tasks/main.yml
@@ -13,7 +13,7 @@
 - name: set key mapping
   copy:
     src: keybindings.json
-    dest: "~/Library/Application\ Support/Code/User/keybindings.json"
+    dest: "~/Library/ApplicationSupport/Code/User/keybindings.json"
     owner: "{{ lookup('env', 'USER') }}"
     group: staff
     mode: 0644
