--- a/roles/code/vars/main.yml
+++ b/roles/code/vars/main.yml
@@ -8,7 +8,7 @@ extensions:
   - yzane.markdown-pdf
   - yzhang.markdown-all-in-one
   - oderwat.indent-rainbow
-  - ms-azuretools.vscode-docker
+#  - ms-azuretools.vscode-docker
   - vscodevim.vim
   - redhat.vscode-yaml
   - ms-vscode-remote.remote-ssh
